<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PSD</string>
    <string name="action_connect_psd">Connect PSD</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Quick search</string>
    <string name="led_connected">PSD connected</string>
    <string name="pref_syncConnectionTypes_default"></string>
    <string name="prefs_file">anon.psd_preferences</string>
    <string name="enter_pass_label">Enter user password</string>
    <string name="notification_title">PSD</string>
    <string name="empty_list">No paired devices..</string>
    <string name="select_psd_lbl">Select PSD from paired devices:</string>
    <string name="go_to_android_settings_to_pair">Pair some devices</string>
    <string name="extras_return_name">SELECTED_NAME</string>
    <string name="extras_return_mac">SELECTED_MAC</string>
    <string name="action_kill_service_and_exit">Kill service and exit</string>
    <string name="action_exit">Close app</string>
    <string name="title_activity_rollback">Oops. Keys desynchronization</string>
    <string name="hello_world">Hello world!</string>

</resources>
