<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".SettingsActivity">

    <item
        android:id="@+id/led_connected"
        android:title="@string/led_connected"
        android:icon="@drawable/ic_little_white"
        android:onClick="onLedClick"
        app:showAsAction="always"/>


    <item
        android:id="@+id/action_connect_psd"
        android:title="@string/action_connect_psd"
        android:orderInCategory="100"
        android:onClick="onLedClick"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:onClick="openSettingsClick"
        android:orderInCategory="100"
        app:showAsAction="never"/>



    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:onClick="exitClick"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_kill_service_and_exit"
        android:title="@string/action_kill_service_and_exit"
        android:onClick="killServiceClick"
        android:orderInCategory="100"
        app:showAsAction="never"/>

</menu>
