<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/icon_toolbar_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/led_connected"
        android:title="@string/led_connected"
        android:icon="@drawable/ic_little_white"
        android:onClick="onLedClick"
        app:showAsAction="always"/>


    <item
        android:id="@+id/action_connect_psd"
        android:title="@string/action_connect_psd"
        android:orderInCategory="100"
        android:onClick="onLedClick"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:onClick="openSettingsClick"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_kill_service"
        android:title="@string/action_kill_service"
        android:onClick="killServiceClick"
        android:orderInCategory="100"
        app:showAsAction="never"/>


</menu>
